--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <h4>
                   <strong>Que es GIT</strong>
                 </h4>
-                <p>Poner respuesta aqui</p>
+                <p>es un software de control de versiones diseñado por Linus Torvalds, pensando en la eficiencia y la confiabilidad del mantenimiento de versiones de aplicaciones cuando éstas tienen un gran número de archivos de código fuente.</p>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -81,7 +81,7 @@
                 <h4>
                   <strong>Que entiendes por HTML y CSS</strong>
                 </h4>
-                <p>Poner respuesta aqui</p>
+                <p>HTML:Lenguaje de Marcas de Hipertexto, que podría ser traducido como Lenguaje de Formato de Documentos para Hipertexto CSS:Hojas de Estilo en Cascada - que es un lenguaje que describe la presentación de los documentos estructurados en hojas de estilo para diferentes métodos de interpretación.</p>
               </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -93,7 +93,7 @@
                 <h4>
                   <strong>Alguna pregunta para el profesor?</strong>
                 </h4>
-                <p>Poner respuesta aqui</p>
+                <p>ninguna</p>
               </div>
             </div>
           </div>
@@ -115,7 +115,7 @@
           <br>Huancayo, Junin, Peru</p>
           <ul class="list-unstyled">
             <li><i class="fa fa-phone fa-fw"></i> Super numero</li>
-            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:mi@email.com">mi@email.com</a>
+            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:normisn12@gmail.com">normisn12@gmail.com</a>
             </li>
           </ul>
           <br>
